tests/expectations/compiler/structs/empty_struct_fail.out
Error [ETYC0372112]: A struct must have at least one member.
    --> compiler-test:3:5
     |
   3 |     struct Bar {}
     |     ^^^^^^^^^^^^^
Error [ETYC0372171]: A struct must have at least one member of non-zero size.
    --> compiler-test:5:5
     |
   5 |     struct Foo {
     |     ^^^^^^^^^^^^
   6 |         a: [u8; 0],
     |         ^^^^^^^^^^^
   7 |     }
     |     ^
Error [ETYC0372083]: A program must have at least one transition function.
    --> compiler-test:2:9
     |
   2 | program test.aleo {
     |         ^^^^^^^^^
